commit html in Chaitu branch

--- a/ass.html
+++ b/ass.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+	<p>
+	This is the ammendment mde by Chaitanya for the assignment on git version control
+	</p>
     <div class="main-container">
         <div class="cloud-image">
             <img src="img/successCloudNew.svg" />
